# HJCFIT

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  DCProgsConfig.h.in  README.md  api.html  bibliography.bib  doxygen.in  genindex.html  index.html  manual.html  objects.inv  occupancies.html  search.html  searchindex.js
.travis/: DCPROGSDeployKey.enc  DCPROGSDeployKey.pub  DCPROGSDeployKeyDevelop.pub  DCPROGSDeployKeyMaster.enc  DCPROGSDeployKeyMaster.pub  dcprogsDeploykey  dcprogsDeploykey.enc  dcprogsDeploykey.pub  deploykeys.tar.enc
TestFortran/: dcprogs.ahk  rundcprogs.py
_modules/: index.html
_modules/dcprogs/: likelihood.html
_sources/: occupancies.txt
_sources/manual/: roots.txt
api/: cpp.html  python.html
api/cpp/: approx_survivor.html  determinanteq.html  exact_survivor.html  exceptions.html  idealG.html  laplace_survivor.html  log10likelihood.html  missed_eventsG.html  occupancies.html  qmatrix.html  roots.html  typehierarchy.html
api/python/: approx_survivor.html  determinanteq.html  exact_survivor.html  idealG.html  log10likelihood.html  missed_eventsG.html  missed_evntsG.html  qmatrix.html  roots.html
cmake_modules/: AddCpp11Flags.cmake  AllPythonBindings.cmake  CTestCustomPreWorkAround.cmake  CheckCXX11Features.cmake  CheckIsNaNStatus.cmake  FindGTest.cmake  FindNbConvert.cmake  FindNumpy.cmake  FindPandoc.cmake  Findeigen.cmake  c++11-test-has_is_move_type_traits.h  c++11-test-type_traits.cpp  convert_notebooks.py  documentation.cmake  test_numpy_has_enableflags.cc  test_numpy_is_noarray.cc  test_numpy_long_double.cc  test_numpy_ubyte.cc
data/: CCO.scn  CMakeLists.txt  CO.scn
deploy/: benchmark_python.sh.mko  legion.py  legion.sh.mko
documentation/: CMakeLists.txt  doxygen.in
documentation/code/: approx_survivor.cc  approx_survivor.py  determinanteq.cc  determinanteq.py  exact_survivor.cc  exact_survivor.py  idealG.cc  idealG.py  log10.cc  log10.py  missedeventsG.cc  missedeventsG.py  occupancies.cc  occupancies.py  qmatrix.cc  qmatrix.py  roots.cc  roots.py
documentation/source/: api.rst  bibliography.bib  conf.py  examples.rst  index.rst  install.rst  manual.rst  mpfr.rst  parallel.rst  spelling_wordlist.txt
documentation/source/_static/: readme
documentation/source/api/: cpp.rst  python.rst
documentation/source/api/cpp/: approx_survivor.rst  exceptions.rst  idealG.rst  log10likelihood.rst  occupancies.rst  roots.rst  typehierarchy.rst
documentation/source/api/python/: approx_survivor.rst  determinanteq.rst  exact_survivor.rst  idealG.rst  log10likelihood.rst  missed_eventsG.rst  qmatrix.rst  roots.rst
documentation/source/cpp/: index.rst
documentation/source/install/: LinuxandOSX.rst  customisinginstall.rst  documentation.rst  install.rst  runningarcher.rst
documentation/source/manual/: approx_survivor.rst  determinant_equation.rst  exact_survivor.rst  idealG.rst  likelihood_of_Q.rst  missedeventsG.rst  occupancies.rst  qmatrix.rst  roots.rst
documentation/source/manual/code/: init_log10.cc  init_log10.py
documentation/source/notebooks/: README
exploration/: CB.ipynb  CH82 -- optimization.ipynb  CH82.ipynb  CH82.scn  CHS vectors.ipynb  CHSvectors.ipynb  CKS.ipynb  DC-pyps comparison.ipynb  Distribution histograms and individual benchmark.ipynb  Distribution_histograms_and_individual_benchmark.ipynb  Exact.ipynb  Example_MLL_Fit_AChR_1patch.ipynb  Example_MLL_Fit_GlyR_4patches.ipynb  MissedEvents.ipynb  OpenMP_example.ipynb  Time series.ipynb  TimeSeries.ipynb  approxG.ipynb  approx_survivor.ipynb  asymptotes.ipynb  asymptotes.py  equilibrium.ipynb  exact_survivor.ipynb  fitAChR1.py  fitGlyR4.py  fitGlyRke4.py
exploration/.ipynb_checkpoints/: CH82 -- optimization-checkpoint.ipynb
exploration/mpi/: fitGlyR4.py  (+6 more)
likelihood/: CMakeLists.txt  approxG.cc  approxG.h  approx_survivor.cc  approx_survivor.h  asymptotes.cc  asymptotes.h  brentq.cc  brentq.h  determinant_equation.cc  determinant_equation.h  equilibrium.cc  equilibrium.h  errors.h  exactG.cc  exactG.h  exact_survivor.cc  exact_survivor.h  idealG.cc  idealG.h  laplace_survivor.cc  laplace_survivor.h  likelihood.cc  likelihood.h  missed_eventG.cc  missed_eventG.h  missed_eventsG.cc  missed_eventsG.h  occupancies.cc  occupancies.h  qmatrix.cc  qmatrix.h  recursion_formula.h  root_finder.cc  root_finder.h  state_matrix.cc  state_matrix.h  time_filter.cc  time_filter.h
likelihood/python/: CMakeLists.txt  __init__.py  _likelihood_methods.py  _methods.py  approxG.swg  approx_survivor.swg  asymptotes.swg  brentq.swg  chained.swg  determinant_equation.swg  exactG.swg  exact_survivor.swg  helpers.h  idealg.swg  likelihood.i  log10likelihood.swg  math.swg  missed_eventsG.swg  numpy_eigen.h  object.h  optimization.py  qmatrix.swg  random.py  root_finder.swg  state_matrix.swg  time_filter.swg
likelihood/python/features/: approx_survivor.feature  asymptotes.feature  determinant_equation.feature  find_roots.feature  idealg.feature  log10likelihood.feature  missed_eventsG.feature  qmatrix.feature  reduce_likelihood.feature  state_matrix.feature  test_setup.py  time_filter.feature
likelihood/python/features/steps/: approx_survivor.py  asymptotes.py  determinant_equation.py  exact_survivor.py  find_roots.py  general.py  idealg.py  log10likelihood.py  missed_eventsg.py  qmatrix.py  reduce_likelihood.py  state_matrix.py  time_filter.py
likelihood/tests/: CMakeLists.txt  asymptotes.cc  brentq.cc  determinant_equation.cc  equilibrium.cc  exactG.cc  exact_survivor.cc  hello.cc  idealG.cc  idealG_laplacian.cc  idealg_exponentials.cc  laplace_survivor.cc  likelihood.cc  mpfr_root_bounds.cc  occupancies.cc  qmatrix.cc  random_matrix.cc  random_matrix.h  recursion_formula.cc  root_finder_intervals.cc  root_finder_lower_bound.cc  state_matrix.cc  time_filter.cc
manual/: approx_survivor.html  determinant_equation.html  exact_survivor.html  idealG.html  likelihood_of_Q.html  missedeventsG.html  occupancies.html  qmatrix.html  roots.html
mpfr/: README.md
python/: CMakeLists.txt  __init__.py
tests/: CMakeLists.txt
utils/: loadArcherModules  loadArcherModules.sh
(+44 files in other folders)
